--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "My Name",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon -r dotenv/config server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node -r dotenv/config server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate"
   },
   "dependencies": {
